--- a/Acardemy/loginUserAcardemy.css
+++ b/Acardemy/loginUserAcardemy.css
@@ -130,10 +130,10 @@ body {
     align-items: center;
     width: 500px;
     height: auto;
-    margin: 50px;
+    margin: 80px;
 }
 
-.titulo_registro {
+.titulo_ingreso {
     border: solid;
     font-size: 30px;
     font-weight: 900;
@@ -159,7 +159,7 @@ body {
     align-items: center;
 }
 
-.icono_registro {
+.icono_ingreso {
     border: solid;
     font-size: 30px;
     font-weight: 700;
@@ -171,6 +171,18 @@ body {
     height: 30px;
     width: 230px;
     border-bottom: solid 5px;
+    cursor: pointer;
+}
+
+.recuperar {
+    border: solid;
+    display: grid;
+    justify-content: end;
+    align-items: center;
+    font-size: 15px;
+    text-decoration: none;
+    font-weight: 400;
+    margin: 5px;
     cursor: pointer;
 }
 
