--- a/Acardemy/panelUserAcardemy.css
+++ b/Acardemy/panelUserAcardemy.css
@@ -95,7 +95,7 @@ body {
     margin-right: 15px;
 }
 
-.registro {
+.salir {
     border: solid;
     font-size: 15px;
     margin-left: 15px;
@@ -115,88 +115,12 @@ body {
     border: solid;
     height: auto;
     width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center
 }
 
 
-/* Formulario */
+/*  */
 
-.cuadro {
-    border: solid;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    width: 500px;
-    height: auto;
-    margin: 80px;
-}
 
-.titulo_ingreso {
-    border: solid;
-    font-size: 30px;
-    font-weight: 900;
-    margin-top: 10px;
-    text-align: center;
-}
-
-.formulario {
-    border: solid;
-    display: grid;
-    justify-content: end;
-    align-items: center;
-    width: auto;
-    height: auto;
-}
-
-.input {
-    border: solid;
-    width: auto;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.icono_ingreso {
-    border: solid;
-    font-size: 30px;
-    font-weight: 700;
-}
-
-.ingreso {
-    border: solid;
-    margin: 20px;
-    height: 30px;
-    width: 230px;
-    border-bottom: solid 5px;
-    cursor: pointer;
-}
-
-.recuperar {
-    border: solid;
-    display: grid;
-    justify-content: end;
-    align-items: center;
-    font-size: 15px;
-    text-decoration: none;
-    font-weight: 400;
-    margin: 5px;
-    cursor: pointer;
-}
-
-.btn {
-    border: solid;
-    margin: 20px;
-    margin-bottom: 30px;
-    height: 50px;
-    width: 300px;
-    font-size: 30px;
-    font-weight: 700;
-    border-radius: 30px;
-    cursor: pointer;
-}
 
 
 /* footer */
